Starting to rewrite the chapter

--- a/pillar.conf
+++ b/pillar.conf
@@ -1,7 +1,7 @@
 {
   "metadata" : {
     "title": "Pharo Elements of Infrastructure",
-    "attribution": "Denis Kudriashov",
+    "attribution": "Denis Kudriashov with Stéphane Ducasse",
     "series": "Square Bracket tutorials",
     "keywords": "Calypso, Browser, Command, Seamless, RMI, Pharo, Smalltalk"
   },
